Criação da tela de login

--- a/src/app/components/template/menu-button/menu-button.component.html
+++ b/src/app/components/template/menu-button/menu-button.component.html
@@ -26,8 +26,8 @@
     </button>
 
     <button mat-menu-item (click) = "navigateToLogin()">
-        <mat-icon class="color-icon">home</mat-icon>
-        <span class="text-menu">Login</span>
+        <mat-icon class="color-icon">login</mat-icon>
+        <span class="text-menu">Sair</span>
     </button>
    
 </mat-menu>
