--- a/src/app/components/template/header/header.component.css
+++ b/src/app/components/template/header/header.component.css
@@ -1,6 +1,7 @@
 .container{
     background-color: #333;
-    height: 15%;
+    height: 15vh;
+    justify-content: center;
     
 }
 .titulo {
@@ -13,4 +14,24 @@
 
 .menu-button{
     justify-content: flex-end;
+    margin-right: 5px;
 }
+
+@media only screen and (max-width: 719px) {
+    .container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .titulo {
+        background-color: #333;
+        color: #9FC5F8;
+        font-size: 20px;
+        padding: 5px;
+        text-align: center;
+     }
+    .menu-button{
+        justify-content: center;
+        margin-right: 5px;
+    }
+ }
