--- a/src/app/components/views/manter-usuarios/manter-usuarios.component.css
+++ b/src/app/components/views/manter-usuarios/manter-usuarios.component.css
@@ -10,11 +10,12 @@
     padding: 25px;
 }
 
-button {
+/* button {
     background-color: #9FC5F8;
     margin: 10px;
     color: black;
-}
+} */
+
 .body {
     margin-left: 10px;
     margin-right: 10px;
