--- a/src/app/components/views/manter-usuarios/manter-usuarios.component.html
+++ b/src/app/components/views/manter-usuarios/manter-usuarios.component.html
@@ -1,8 +1,12 @@
 <app-header></app-header>
-    <button mat-raised-button (click)="navigateToManterUsuarios()">
+    <!-- <button mat-raised-button (click)="navigateToManterUsuarios()">
         <mat-icon class="color-icon">fiber_new</mat-icon>
         Novo Usuário
     </button>
+    <button mat-raised-button (click)="listarTodosUsuarios()">
+        <mat-icon class="color-icon">list</mat-icon>
+        Listar Usuários
+      </button> -->
     <div class="body">
         <app-usuario-read></app-usuario-read>
     </div>
