--- a/src/app/components/usuario/usuario-delete/usuario-delete.component.html
+++ b/src/app/components/usuario/usuario-delete/usuario-delete.component.html
@@ -1,1 +1,37 @@
-<p>usuario-delete works!</p>
+<app-header></app-header>
+<mat-card>
+    <mat-card-title>Excluir Usuário</mat-card-title>
+    <form>
+        <mat-form-field>
+            <input matInput placeholder="Empresa"
+                [value]="usuario.empresa" name="empresa" disabled >
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Email"
+                [value]="usuario.email" name="email" disabled>
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Nome Usuario"
+                [value]="usuario.nomeUsuario" name="nomeUsuario" disabled >
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Senha"
+                [value]="usuario.senha" name="senha" disabled>
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Nivel Acesso"
+                [value]="usuario.nivelAcesso" name="nivelAcesso" disabled >
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Nome Completo"
+                [value]="usuario.nomeCompleto" name="nomeCompleto" disabled>
+        </mat-form-field>
+    </form>
+    <button mat-raised-button (click)="deleteProduct()" color="warn">
+        Excluir
+    </button>
+    
+    <button mat-raised-button (click)="cancel()">
+        Cancelar
+    </button>
+</mat-card>
