Telas e Lógicas do CRUD parcialmente realizadas

--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,8 +1,10 @@
-<mat-toolbar class="container">
-    <div class="titulo">
-        S.I.L.O. - Sistema de Informação de Lotação de Ônibus
-    </div>
-    <div class="menu-button">
-        <app-menu-button></app-menu-button>
-    </div>
-</mat-toolbar>
+<div class="container">
+    <mat-toolbar class="toolbar">
+        <div class="titulo">
+            S.I.L.O. - Sistema de Informação de Lotação de Ônibus
+        </div>
+        <div class="menu-button">
+            <app-menu-button></app-menu-button>
+        </div>
+    </mat-toolbar>
+</div>
