--- a/src/app/components/views/manter-usuarios/manter-usuarios.component.css
+++ b/src/app/components/views/manter-usuarios/manter-usuarios.component.css
@@ -1,4 +1,4 @@
-.container{
+/* .container{
     background-color: #555; 
     margin: 10px;
 
@@ -8,12 +8,6 @@
     font-size: 20px;
     text-align: center;
     padding: 25px;
-}
-
-/* button {
-    background-color: #9FC5F8;
-    margin: 10px;
-    color: black;
 } */
 
 .body {
