--- a/src/app/components/template/header/header.component.css
+++ b/src/app/components/template/header/header.component.css
@@ -1,28 +1,32 @@
 .container{
-    background-color: #333;
+    display: flex;    
     height: 15vh;
-    justify-content: center;
-    
+    width: 100vw;
 }
+
+.toolbar {
+    height: 100%;
+    background-color: #333;
+}
+
 .titulo {
     color: #9FC5F8;
     font-size: 25px;
-    width: 100%;
+    width: 100vw;
     justify-content: center;
     display: flex;
 }
 
 .menu-button{
+    display: flex;
     justify-content: flex-end;
     margin-right: 5px;
 }
 
 @media only screen and (max-width: 719px) {
-    .container {
+    .toolbar {
         flex-direction: column;
-        align-items: center;
     }
-
     .titulo {
         background-color: #333;
         color: #9FC5F8;
@@ -33,5 +37,24 @@
     .menu-button{
         justify-content: center;
         margin-right: 5px;
+        flex-direction: column;
+    }
+ }
+ @media only screen and (max-width: 500px) {
+    .toolbar {
+        flex-direction: column;
+    }
+    .titulo {
+        background-color: #333;
+        color: #9FC5F8;
+        font-size: 15px;
+        padding: 5px;
+        text-align: center;
+        color: #9FC5F8;
+     }
+    .menu-button{
+        justify-content: center;
+        margin-right: 5px;
+        flex-direction: column;
     }
  }
