--- a/src/app/components/usuario/usuario-create/usuario-create.component.html
+++ b/src/app/components/usuario/usuario-create/usuario-create.component.html
@@ -3,28 +3,32 @@
     <mat-card-title>Novo Usuário</mat-card-title>
     <form>
         <mat-form-field>
-            <input matInput placeholder="Empresa"
-                [(ngModel)]="usuario.empresa" name="empresa" >
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Email"
-                [(ngModel)]="usuario.email" name="email" >
+            <input type="number" matInput placeholder="Cód. Usuário"
+                [(ngModel)]="usuario.codUsuario" name="codUsuario" >
         </mat-form-field>
         <mat-form-field>
             <input matInput placeholder="Nome Usuario"
                 [(ngModel)]="usuario.nomeUsuario" name="nomeUsuario" >
         </mat-form-field>
         <mat-form-field>
+            <input matInput placeholder="Empresa"
+                [(ngModel)]="usuario.empresa" name="empresa" >
+        </mat-form-field>
+        <mat-form-field>
+            <input type="number" matInput placeholder="Cód. Empresa"
+                [(ngModel)]="usuario.codEmpresa" name="codEmpresa" >
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Email"
+                [(ngModel)]="usuario.email" name="email" >
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Login"
+                [(ngModel)]="usuario.login" name="login" >
+        </mat-form-field>
+        <mat-form-field>
             <input matInput placeholder="Senha"
                 [(ngModel)]="usuario.senha" name="senha" >
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Nivel Acesso"
-                [(ngModel)]="usuario.nivelAcesso" name="nivelAcesso" >
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Nome Completo"
-                [(ngModel)]="usuario.nomeCompleto" name="nomeCompleto" >
         </mat-form-field>
     </form>
     <button mat-raised-button (click)="createUsuario()" color="primary">
