--- a/src/app/components/usuario/usuario-read/usuario-read.component.html
+++ b/src/app/components/usuario/usuario-read/usuario-read.component.html
@@ -1,69 +1,74 @@
 <div>
   <div>
-    <button mat-raised-button (click)="listarTodosUsuarios()">
-      <mat-icon class="color-icon">list</mat-icon>
-      Listar Usuários
-    </button>
     <button mat-raised-button (click)="navigateToManterUsuarios()">
       <mat-icon class="color-icon">fiber_new</mat-icon>
       Novo Usuário
     </button>
-    
+    <button mat-raised-button (click)="listarTodosUsuarios()">
+      <mat-icon class="color-icon">list</mat-icon>
+      Listar Usuários
+    </button>
   </div>
 
   <table mat-table [dataSource]="usuarios" class="mat-elevation-z4">
     <!-- Id Column -->
-    <ng-container matColumnDef="idUsuario">
-      <th mat-header-cell *matHeaderCellDef>Id</th>
-      <td mat-cell *matCellDef="let row">{{row.idUsuario}}</td>
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>ID</th>
+      <td mat-cell *matCellDef="let row">{{row.id}}</td>
     </ng-container>
 
-    <!-- Empresa Column -->
+    <!-- Cod Usuario Column -->
+    <ng-container matColumnDef="codUsuario">
+      <th mat-header-cell *matHeaderCellDef>Cod. Usuário</th>
+      <td mat-cell *matCellDef="let row">{{row.codUsuario}}</td>
+    </ng-container>
+
+    <!-- nomeUsuario Column -->
+    <ng-container matColumnDef="nomeUsuario">
+      <th mat-header-cell *matHeaderCellDef>Nome Usuario</th>
+      <td mat-cell *matCellDef="let row">{{row.nomeUsuario}}</td>
+    </ng-container>
+
+    <!-- empresa Column -->
     <ng-container matColumnDef="empresa">
       <th mat-header-cell *matHeaderCellDef>Empresa</th>
       <td mat-cell *matCellDef="let row">{{row.empresa}}</td>
     </ng-container>
 
-    <!-- Email Column -->
+    <!-- codEmpresa Column -->
+    <ng-container matColumnDef="codEmpresa">
+      <th mat-header-cell *matHeaderCellDef>Cód Empresa</th>
+      <td mat-cell *matCellDef="let row">{{row.codEmpresa}}</td>
+    </ng-container>
+
+    <!-- email Column -->
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef>Email</th>
       <td mat-cell *matCellDef="let row">{{row.email}}</td>
     </ng-container>
 
-    <!-- Nome Usuario Column -->
-    <ng-container matColumnDef="nomeUsuario">
-      <th mat-header-cell *matHeaderCellDef>Usuário</th>
-      <td mat-cell *matCellDef="let row">{{row.nomeUsuario}}</td>
+    <!-- login Column -->
+    <ng-container matColumnDef="login">
+      <th mat-header-cell *matHeaderCellDef>Login</th>
+      <td mat-cell *matCellDef="let row">{{row.login}}</td>
     </ng-container>
 
-    <!-- Senha Column -->
+    <!-- senha Column -->
     <ng-container matColumnDef="senha">
       <th mat-header-cell *matHeaderCellDef>Senha</th>
       <td mat-cell *matCellDef="let row">{{row.senha}}</td>
-    </ng-container>
-
-    <!-- Nivel Acesso Column -->
-    <ng-container matColumnDef="nivelAcesso">
-      <th mat-header-cell *matHeaderCellDef>Nível Acesso</th>
-      <td mat-cell *matCellDef="let row">{{row.nivelAcesso}}</td>
-    </ng-container>
-
-    <!-- Nome Completo Column -->
-    <ng-container matColumnDef="nomeCompleto">
-      <th mat-header-cell *matHeaderCellDef>Nome Completo</th>
-      <td mat-cell *matCellDef="let row">{{row.nomeCompleto}}</td>
     </ng-container>
 
     <!-- Action Column -->
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let row">
-        <a routerLink="/usuarios/update/{{ row.idUsuario }}" class="update">
+        <a routerLink="/usuarios/update/{{ row.id }}" class="update">
           <i class="material-icons">
             edit
           </i>
         </a>
-        <a routerLink="/usuarios/delete/{{ row.idUsuario }}" class="delete">
+        <a routerLink="/usuarios/delete/{{ row.id }}" class="delete">
           <i class="material-icons">
             delete
           </i>
