--- a/src/app/components/usuario/usuario-update/usuario-update.component.html
+++ b/src/app/components/usuario/usuario-update/usuario-update.component.html
@@ -1,2 +1,43 @@
 <app-header></app-header>
-<p>usuario-update works!</p>
+<mat-card>
+    <mat-card-title>Update Usuário</mat-card-title>
+    <form>
+        <mat-form-field>
+            <input disabled matInput placeholder="Cód. Usuário"
+                [(ngModel)]="usuario.codUsuario" name="codUsuario" >
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Nome Usuario"
+                [(ngModel)]="usuario.nomeUsuario" name="nomeUsuario" >
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Empresa"
+                [(ngModel)]="usuario.empresa" name="empresa" >
+        </mat-form-field>
+        <mat-form-field>
+            <input type="number" matInput placeholder="Cód. Empresa"
+                [(ngModel)]="usuario.codEmpresa" name="codEmpresa" >
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Email"
+                [(ngModel)]="usuario.email" name="email" >
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Login"
+                [(ngModel)]="usuario.login" name="login" >
+        </mat-form-field>
+        <mat-form-field>
+            <input matInput placeholder="Senha"
+                [(ngModel)]="usuario.senha" name="senha" >
+        </mat-form-field>
+    </form>
+    <button mat-raised-button (click)="updateUsuario()" color="primary">
+        Salvar
+    </button>
+    
+    <button mat-raised-button (click)="cancel()">
+        Cancelar
+    </button>
+</mat-card>
+
+
