--- a/src/app/components/views/login/login.component.html
+++ b/src/app/components/views/login/login.component.html
@@ -20,10 +20,10 @@
                     <mat-icon class="corIcone">login</mat-icon>
                     <span class="textoBotao">Entrar</span>
                 </button>
-                <button class="botao" mat-raised-button>
+                <!-- <button class="botao" mat-raised-button>
                     <mat-icon class="corIcone">clear</mat-icon>
                     <span class="textoBotao">Limpar</span>
-                </button>
+                </button> -->
             </div>
         </form>
     </div>
