--- a/src/app/components/usuario/usuario-delete/usuario-delete.component.html
+++ b/src/app/components/usuario/usuario-delete/usuario-delete.component.html
@@ -1,41 +1,48 @@
 <app-header></app-header>
-<mat-card>
-    <mat-card-title>Excluir Usuário</mat-card-title>
-    <form>
-        <mat-form-field>
-            <input matInput placeholder="Cód. Usuário"
-                [value]="usuario.codUsuario" name="codUsuario" disabled >
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Nome Usuário"
-                [value]="usuario.nomeUsuario" name="nomeUsuario" disabled >
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Empresa"
-                [value]="usuario.empresa" name="empresa" disabled>
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Cód. Empresa"
-                [value]="usuario.codEmpresa" name="codEmpresa" disabled >
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Email"
-                [value]="usuario.email" name="email" disabled>
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Login"
-                [value]="usuario.login" name="login" disabled >
-        </mat-form-field>
-        <mat-form-field>
-            <input matInput placeholder="Senha"
-                [value]="usuario.senha" name="senha" disabled>
-        </mat-form-field>
+<mat-card class="container">
+    <mat-card-title>Excluir usuário</mat-card-title>
+    <form class="formulario">
+        <main>
+            <mat-form-field class="inputCod" appearance="outline" color="accent">
+                <mat-label>Cód. Usuário</mat-label>
+                <input type="number" matInput [value]="usuario.codUsuario" name="codUsuario" disabled>
+            </mat-form-field>
+            <mat-form-field class="inputNome" appearance="outline" color="accent">
+                <mat-label>Nome Usuario</mat-label>
+                <input matInput [value]="usuario.nomeUsuario" name="nomeUsuario" disabled>
+            </mat-form-field>
+            <mat-form-field class="inputCod" appearance="outline" color="accent">
+                <mat-label>Cód. Empresa</mat-label>
+                <input type="number" matInput [value]="usuario.codEmpresa" name="codEmpresa" disabled>
+            </mat-form-field>
+            <mat-form-field class="inputNome" appearance="outline" color="accent">
+                <mat-label>Empresa</mat-label>
+                <input matInput [value]="usuario.empresa" name="empresa" disabled>
+            </mat-form-field>
+        </main>
+        <footer>
+            <mat-form-field class="inputEmail" appearance="outline" color="accent">
+                <mat-label>Email</mat-label>
+                <input matInput [value]="usuario.email" name="email" disabled>
+            </mat-form-field>
+            <mat-form-field class="inputLogin" appearance="outline" color="accent">
+                <mat-label>Login</mat-label>
+                <input matInput [value]="usuario.login" name="login" disabled>
+            </mat-form-field>
+            <mat-form-field class="inputSenha" appearance="outline" color="accent">
+                <mat-label>Senha</mat-label>
+                <input matInput [value]="usuario.senha" name="senha" disabled>
+            </mat-form-field>
+        </footer>
     </form>
-    <button mat-raised-button (click)="deleteProduct()" color="warn">
-        Excluir
-    </button>
-    
-    <button mat-raised-button (click)="cancel()">
-        Cancelar
-    </button>
+    <div class="botoes">
+        <button class="botaoSalvar" mat-raised-button (click)="deleteProduct()" >
+            <mat-icon appearance="outline">delete</mat-icon>
+            <span class="textButton">Excluir</span>
+        </button>
+        <button class="botaoCancelar" mat-raised-button (click)="cancel()">
+            <mat-icon>close_outline</mat-icon>
+            <span class="textButton">Cancelar</span>
+        </button>
+    </div>
 </mat-card>
