Alteração dos campos de senha para type password

--- a/src/app/components/usuario/usuario-create/usuario-create.component.html
+++ b/src/app/components/usuario/usuario-create/usuario-create.component.html
@@ -31,7 +31,7 @@
             </mat-form-field>
             <mat-form-field class="inputSenha" appearance="outline" color="accent">
                 <mat-label>Senha</mat-label>
-                <input matInput [(ngModel)]="usuario.senha" name="senha">
+                <input matInput [(ngModel)]="usuario.senha" name="senha" type="password">
             </mat-form-field>
         </footer>
     </form>
