--- a/src/app/components/usuario/usuario-delete/usuario-delete.component.html
+++ b/src/app/components/usuario/usuario-delete/usuario-delete.component.html
@@ -31,7 +31,7 @@
             </mat-form-field>
             <mat-form-field class="inputSenha" appearance="outline" color="accent">
                 <mat-label>Senha</mat-label>
-                <input matInput [value]="usuario.senha" name="senha" disabled>
+                <input matInput [value]="usuario.senha" name="senha" type="password" disabled >
             </mat-form-field>
         </footer>
     </form>
