--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -1,4 +1,30 @@
 <app-header></app-header>
-<div class="container">
+<!-- <div class="container">
     <h1 class="titulo"> HOME</h1>
-</div>
+</div> -->
+<mat-grid-list cols="2" rowHeight="40vh">
+    <mat-grid-tile>
+        <a routerLink="/manter_usuarios">
+            <mat-icon class="color-icon">account_circle</mat-icon>
+            <span class="text-menu">Manter Usuários</span>
+        </a>
+    </mat-grid-tile>
+    <mat-grid-tile>
+        <a routerLink="/manter_veiculos">
+            <mat-icon class="color-icon">commute</mat-icon>
+            <span class="text-menu">Manter Veículos</span>
+        </a>
+    </mat-grid-tile>
+    <mat-grid-tile>
+        <a routerLink="/manter_equipamentos">
+            <mat-icon class="color-icon">developer_board</mat-icon>
+            <span class="text-menu">Manter Equipamentos</span>
+        </a>
+    </mat-grid-tile>
+    <mat-grid-tile>
+        <a routerLink="/mostrar_nivel_lotacao">
+            <mat-icon class="color-icon">visibility</mat-icon>
+            <span class="text-menu">Mostrar Nível de Lotação</span>
+        </a>
+    </mat-grid-tile>
+</mat-grid-list>
