--- a/src/app/components/views/home/home.component.html
+++ b/src/app/components/views/home/home.component.html
@@ -1,8 +1,8 @@
 <app-header></app-header>
-<!-- <div class="container">
+<div class="container">
     <h1 class="titulo"> HOME</h1>
-</div> -->
-<mat-grid-list cols="2" rowHeight="40vh">
+</div>
+<!-- <mat-grid-list cols="2" rowHeight="40vh">
     <mat-grid-tile>
         <a routerLink="/manter_usuarios">
             <mat-icon class="color-icon">account_circle</mat-icon>
@@ -27,4 +27,4 @@
             <span class="text-menu">Mostrar Nível de Lotação</span>
         </a>
     </mat-grid-tile>
-</mat-grid-list>
+</mat-grid-list> -->
