--- a/src/app/components/usuario/usuario-create/usuario-create.component.css
+++ b/src/app/components/usuario/usuario-create/usuario-create.component.css
@@ -7,6 +7,93 @@
 }
 
 .formulario {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;    
+    width: 50vw;
+    margin-top: 10px;
+}
+
+
+.botoes {
+    display: flex;
+    justify-content: center;
+    width: 50vw;
+    margin-top: 10px;
+}
+
+.botaoSalvar {
+    background-color: #9FC5F8;
+    color: #333;
+    margin-right: 10px;
+    width: 8rem;    
+}
+
+.botaoCancelar {
+    background-color: #e35e6b;
+    width: 8rem;
+}
+
+.textButton{
+    margin-left: 5px;
+}
+
+mat-form-field.mat-form-field {
+    font-size: 13px;
+}
+
+.inputId {
+    width: 80%;
+}
+
+.inputNome {
+    width: 80%;
+}
+
+.inputSenha  {
+    width: 80%;
+}
+
+.inputEmpresaId {
+    width: 80%;
+}
+
+.inputEmpresa {
+    width: 80%;
+}
+
+@media only screen and (max-width: 500px) {
+    .botoes {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50vw;        
+    }
+
+    .botaoSalvar {
+        background-color: #9FC5F8;
+        color: #333;
+        width: 80%; 
+        margin: 3px;
+    }
+
+    .botaoCancelar {
+        background-color: #e35e6b;
+        width: 80%;
+        margin: 3px;
+    }
+}
+
+/* .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+    padding: 25px;
+}
+
+.formulario {
     display: grid;
     width: 90vw;
     margin: 10px;
@@ -58,22 +145,53 @@ mat-form-field.mat-form-field {
     font-size: 13px;
 }
 
-.inputCod {
-    width: 10%;
+.inputId {
+    width: 90%;
 }
 
 .inputNome {
-    width: 35%;
+    width: 90%;
 }
 
-.inputEmail  {
-    width: 42%;
+.inputSenha  {
+    width: 90%;
 }
 
-.inputLogin {
-    width: 25%;
+.inputEmpresaId {
+    width: 90%;
 }
 
-.inputSenha {
-    width: 25%;
+.inputEmpresa {
+    width: 90%;
 }
+
+@media only screen and (max-width: 500px) {
+    .formulario {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;    
+        width: 50vw;
+        margin-top: 10px;
+    }
+
+    .botoes {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 50vw;        
+    }
+
+    .botaoSalvar {
+        background-color: #9FC5F8;
+        color: #333;
+        width: 80%; 
+        margin: 3px;
+    }
+
+    .botaoCancelar {
+        background-color: #e35e6b;
+        width: 80%;
+        margin: 3px;
+    }
+} */
