--- a/src/app/components/usuario/usuario-create/usuario-create.component.html
+++ b/src/app/components/usuario/usuario-create/usuario-create.component.html
@@ -2,6 +2,43 @@
 <mat-card class="container">
     <mat-card-title>Cadastrar usuário</mat-card-title>
     <form class="formulario">
+        <mat-form-field class="inputId" appearance="outline" color="accent">
+            <mat-label>Id</mat-label>
+            <input type="number" matInput [(ngModel)]="usuario.id" name="id">
+        </mat-form-field>
+        <mat-form-field class="inputNome" appearance="outline" color="accent">
+            <mat-label>Nome (usuário)</mat-label>
+            <input matInput [(ngModel)]="usuario.nome" name="nome">
+        </mat-form-field>
+        <mat-form-field class="inputSenha" appearance="outline" color="accent">
+            <mat-label>Senha</mat-label>
+            <input type="password" matInput [(ngModel)]="usuario.senha" name="senha">
+        </mat-form-field>
+        <mat-form-field class="inputEmpresaId" appearance="outline" color="accent">
+            <mat-label>Empresa ID</mat-label>
+            <input type="number" matInput [(ngModel)]="usuario.empresaId" name="empresaId">
+        </mat-form-field>
+        <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
+            <mat-label>Empresa</mat-label>
+            <input matInput [(ngModel)]="usuario.empresa" name="empresa">
+        </mat-form-field>
+    </form>
+    <div class="botoes">
+        <button class="botaoSalvar" mat-raised-button (click)="createUsuario()">
+            <mat-icon>save</mat-icon>
+            <span class="textButton">Salvar</span>
+        </button>
+        <button class="botaoCancelar" mat-raised-button (click)="cancel()">
+            <mat-icon>close</mat-icon>
+            <span class="textButton">Cancelar</span>
+        </button>
+    </div>
+</mat-card>
+
+
+<!-- <mat-card class="container">
+    <mat-card-title>Cadastrar usuário</mat-card-title>
+    <form class="formulario">
         <main>
             <mat-form-field class="inputCod" appearance="outline" color="accent">
                 <mat-label>Cód. Usuário</mat-label>
@@ -45,4 +82,4 @@
             <span class="textButton">Cancelar</span>
         </button>
     </div>
-</mat-card>
+</mat-card> -->
