--- a/src/app/components/usuario/usuario-update/usuario-update.component.html
+++ b/src/app/components/usuario/usuario-update/usuario-update.component.html
@@ -4,23 +4,27 @@
     <form class="formulario">
         <mat-form-field class="inputId" appearance="outline" color="accent">
             <mat-label>Id</mat-label>
-            <input type="number" matInput  name="id">
+            <input type="number" matInput [(ngModel)]="usuario.id" name="id" disabled>
         </mat-form-field>
         <mat-form-field class="inputNome" appearance="outline" color="accent">
             <mat-label>Nome (usuário)</mat-label>
-            <input matInput  name="nome">
+            <input matInput [(ngModel)]="usuario.nome" name="nome">
         </mat-form-field>
         <mat-form-field class="inputSenha" appearance="outline" color="accent">
             <mat-label>Senha</mat-label>
-            <input type="password" matInput  name="senha">
+            <input type="password" matInput [(ngModel)]="usuario.senha" name="senha">
+        </mat-form-field>
+        <mat-form-field class="inputSenha" appearance="outline" color="accent">
+            <mat-label>Confirmação Senha</mat-label>
+            <input type="password" matInput [(ngModel)]="senhaCheck" name="senha">
         </mat-form-field>
         <mat-form-field class="inputEmpresaId" appearance="outline" color="accent">
             <mat-label>Empresa ID</mat-label>
-            <input type="number" matInput  name="empresaId">
+            <input type="number" matInput [(ngModel)]="usuario.empresaId" name="empresaId">
         </mat-form-field>
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
-            <input matInput name="empresa">
+            <input matInput [(ngModel)]="usuario.empresa" name="empresa">
         </mat-form-field>
     </form>
     <div class="botoes">
