--- a/src/app/components/usuario/usuario-read/usuario-read.component.html
+++ b/src/app/components/usuario/usuario-read/usuario-read.component.html
@@ -1,6 +1,6 @@
 <div>
   <div>
-    <button mat-raised-button (click)="navigateToManterUsuarios()">
+    <button mat-raised-button (click)="navigateToNovoUsuario()">
       <mat-icon class="color-icon">fiber_new</mat-icon>
       Novo Usuário
     </button>
