--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -3,6 +3,9 @@
         <div class="titulo">
             S.I.L.O. - Sistema de Informação de Lotação de Ônibus
         </div>
+        <div class="tituloPequeno">
+            S.I.L.O.
+        </div>
         <div class="menu-button">
             <app-menu-button></app-menu-button>
         </div>
