Telas de Update e Delete corrigidas

--- a/src/app/components/usuario/usuario-delete/usuario-delete.component.html
+++ b/src/app/components/usuario/usuario-delete/usuario-delete.component.html
@@ -25,8 +25,8 @@
     </form>
     <div class="botoes">
         <button class="botaoSalvar" mat-raised-button (click)="deleteUsuario()">
-            <mat-icon>save</mat-icon>
-            <span class="textButton">Salvar</span>
+            <mat-icon>delete</mat-icon>
+            <span class="textButton">Excluir</span>
         </button>
         <button class="botaoCancelar" mat-raised-button (click)="cancel()">
             <mat-icon>close</mat-icon>
