--- a/src/app/components/usuario/usuario-read/usuario-read.component.html
+++ b/src/app/components/usuario/usuario-read/usuario-read.component.html
@@ -1,7 +1,7 @@
 <div>
   <div>
     <button mat-raised-button (click)="navigateToNovoUsuario()">
-      <mat-icon class="color-icon">fiber_new</mat-icon>
+      <mat-icon class="color-icon">person_add</mat-icon>
       Novo Usuário
     </button>
     <button mat-raised-button (click)="listarTodosUsuarios()">
