--- a/src/app/components/usuario/usuario-update/usuario-update.component.html
+++ b/src/app/components/usuario/usuario-update/usuario-update.component.html
@@ -8,28 +8,28 @@
         </mat-form-field>
         <mat-form-field class="inputNome" appearance="outline" color="accent">
             <mat-label>Nome (usuário)</mat-label>
-            <input matInput [(ngModel)]="usuario.nome" name="nome">
+            <input matInput [(ngModel)]="usuario.nome" name="nome" required>
         </mat-form-field>
         <mat-form-field class="inputSenha" appearance="outline" color="accent">
             <mat-label>Senha</mat-label>
-            <input type="password" matInput [(ngModel)]="usuario.senha" name="senha">
+            <input type="password" matInput [(ngModel)]="usuario.senha" name="senha" required>
         </mat-form-field>
         <mat-form-field class="inputSenha" appearance="outline" color="accent">
             <mat-label>Confirmação Senha</mat-label>
-            <input type="password" matInput [(ngModel)]="senhaCheck" name="senha">
+            <input type="password" matInput [(ngModel)]="senhaCheck" name="senha" required>
         </mat-form-field>
         <mat-form-field class="inputEmpresaId" appearance="outline" color="accent">
             <mat-label>Empresa ID</mat-label>
-            <input type="number" matInput [(ngModel)]="usuario.empresaId" name="empresaId">
+            <input type="number" matInput [(ngModel)]="usuario.empresaId" name="empresaId" required>
         </mat-form-field>
         <mat-form-field class="inputEmpresa" appearance="outline" color="accent">
             <mat-label>Empresa</mat-label>
-            <input matInput [(ngModel)]="usuario.empresa" name="empresa">
+            <input matInput [(ngModel)]="usuario.empresa" name="empresa" required>
         </mat-form-field>
     </form>
     <div class="botoes">
         <button class="botaoSalvar" mat-raised-button (click)="updateUsuario()">
-            <mat-icon>update</mat-icon>
+            <mat-icon>sync</mat-icon>
             <span class="textButton">Atualizar</span>
         </button>
         <button class="botaoCancelar" mat-raised-button (click)="cancel()">
