usuario no login

--- a/src/app/components/views/login/login.component.html
+++ b/src/app/components/views/login/login.component.html
@@ -8,7 +8,7 @@
     <div class="form-wrapper">
         <form name="form" (ngSubmit)="f.form.valid && efetuarLogin()" #f="ngForm">
             <div class="input-block">
-                <label for="login-email">Email</label>
+                <label for="login-email">Usuário</label>
                 <input type="text" id="username" name="username" [(ngModel)]="model.username" />
             </div>
             <div class="input-block">
